# spotscan

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  bot.session  compose.yml  response.json
docs/: openapi.json
migrations/: V1__initial.sql  V2__add_column_last_slots.sql
src/: app.rs  club.rs  domain.rs  handler.rs  lib.rs  main.rs  prelude.rs  spot.rs  state.rs
src/club/: spot.rs
src/handler/: club.rs  spot.rs  user.rs
src/handler/club/: get_user_slots.rs
src/handler/spot/: get_schedule.rs  get_user_slots.rs
src/handler/user/: get_user.rs  update_settings.rs
src/state/: config.rs  store.rs
src/state/store/: user.rs
web/: .env.dev  .env.prod  .prettierignore  README.md  deploy_web.sh  index.html  package-lock.json  package.json  prettier.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: App.vue  config.ts  errorHandler.ts  init.ts  main.ts  mockEnv.ts
web/src/assets/: index.css
web/src/components/: AppInit.vue  AppLink.vue  AppPage.vue  AsyncWrap.vue  ContentWrap.vue  MainBtn.vue  MainGap.vue  MainTitle.vue  PlainError.vue
web/src/components/icon/: TelegramIcon.vue  WalletIcon.vue
web/src/composables/: useBackButton.ts
web/src/modules/settings/views/appearance/: ThemeView.vue
web/src/modules/settings/views/general/: CurrencyView.vue
web/src/router/: index.ts
web/src/stores/: index.ts  router.ts
web/src/utils/: api.ts  helpers.ts
web/src/utils/openapi/: api.ts  base.ts  common.ts  configuration.ts  index.ts
web/src/utils/openapi/.openapi-generator/: FILES
web/src/utils/openapi/docs/: AppTheme.md  BotView.md  CreateEventRequest.md  CreateWalletBookRecordRequest.md  Currency.md  DaySlot.md  DefaultApi.md  Event.md  EventKind.md  EventParams.md  EventParamsOneOf.md  EventParamsOneOf1.md  EventParamsOneOf1Swap.md  EventParamsOneOf1TokenSell.md  EventParamsOneOf1WalletSell.md  EventParamsOneOf2.md  EventParamsOneOf2TokenPriceChange.md  EventParamsOneOf2TokenSell.md  EventParamsOneOf3.md  EventParamsOneOf3TokenSell.md  EventParamsOneOf3WalletSell.md  EventParamsOneOf4.md  EventParamsOneOf4WalletSell.md  EventParamsOneOf5.md  EventParamsOneOfPrice.md  EventParamsOneOfPriceUp.md  EventParamsOneOfTokenSell.md  FieldSlot.md  FreeSlot.md  FreeSlotWeek.md  GetUserEventsEvents.md  GetUserEventsEventsAgg.md  GetUserEventsLookup.md  GetUserEventsResponse.md  GetUserSlots.md  GetUserWalletResponse.md  KafkaEvent.md  KafkaEventSwap.md  Operation.md  Res.md  (+15 more)
web/src/views/: DayDurationView.vue  DayEndsView.vue  DayStartsView.vue  DayView.vue  DefaultsDurationView.vue  DefaultsEndsView.vue  DefaultsStartsView.vue  ErrorPage.vue  IndexView.vue  MainLayout.vue  SettingsView.vue  SlotsView.vue  ThemeView.vue
