[package]
name = "spotscan"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde-human-readable", "formatting", "parsing", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.14", features = ["with-time-0_3", "with-serde_json-1", "array-impls"] }
