[package]
name = "spotscan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[[bin]]
name = "spot"
path = "src/bin/spot.rs"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
axum = "0.8.4"
deadpool = "0.12.3"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
grammers-client = { git = "https://github.com/Lonami/grammers" }
init-data-rs = "0.1.3"
postgres-types = { version = "0.2.9", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde-human-readable", "serde-well-known", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.14", features = ["with-time-0_3", "with-serde_json-1", "array-impls"] }
futures-util = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
tracing = "0.1.41"
strum = { version = "0.27.1", features = ["derive"] }
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "decimal", "time"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
serde_derive = "1.0.228"
config = "0.15.11"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing-subscriber = "0.3.20"
sea-query = { version = "0.32.6", features = ["derive", "backend-postgres", "with-time", "with-json", "with-uuid", "postgres-array", "attr", "thread-safe"] }
